--- a/src/main/resources/templates/fragments/card.html
+++ b/src/main/resources/templates/fragments/card.html
@@ -1,9 +1,30 @@
-<div th:fragment="card(subtitle, title, id)" class="card">
+<div th:fragment="card(subtitle, title, id, authorId)" class="relative card">
+    <svg th:if="${#authorization.expression('isAuthenticated()') && #authentication.principal.id == authorId}"
+         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"
+         class="absolute top-2.5 right-2.5 w-5 h-5 text-white drop-shadow-[0_0_6px_rgba(255,255,255,0.8)]">
+        <path d="M341.5 45.1C337.4 37.1 329.1 32 320.1 32C311.1 32 302.8 37.1 298.7 45.1L225.1 189.3L65.2 214.7C56.3 216.1 48.9 222.4 46.1 231C43.3 239.6 45.6 249 51.9 255.4L166.3 369.9L141.1 529.8C139.7 538.7 143.4 547.7 150.7 553C158 558.3 167.6 559.1 175.7 555L320.1 481.6L464.4 555C472.4 559.1 482.1 558.3 489.4 553C496.7 547.7 500.4 538.8 499 529.8L473.7 369.9L588.1 255.4C594.5 249 596.7 239.6 593.9 231C591.1 222.4 583.8 216.1 574.8 214.7L415 189.3L341.5 45.1z"
+              fill="currentColor"/>
+    </svg>
     <a th:href="${'/note/' + id + '/description'}">
         <div class="card__subtitle" th:text="${subtitle}"></div>
         <div class="card__wrapper">
             <div class="card__title" th:text="${title}"></div>
-            <div class="card__icon"><svg color="rgb(224, 223, 220)" style="user-select: none; width: 100%; height: 100%; display: inline-block; fill: rgb(224, 223, 220); flex-shrink: 0; cursor: auto;" viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg"><g color="rgb(224, 223, 220)"><circle opacity="0.2" r="96" cy="128" cx="128"></circle><circle stroke-width="16" stroke-miterlimit="10" stroke="rgb(224, 223, 220)" fill="none" r="96" cy="128" cx="128"></circle><polyline stroke-width="16" stroke-linejoin="round" stroke-linecap="round" stroke="rgb(224, 223, 220)" fill="none" points="134.1 161.9 168 128 134.1 94.1"></polyline><line stroke-width="16" stroke-linejoin="round" stroke-linecap="round" stroke="rgb(224, 223, 220)" fill="none" y2="128" x2="168" y1="128" x1="88"></line></g></svg></div>
+            <div class="card__icon">
+                <svg color="rgb(224, 223, 220)"
+                     style="user-select: none; width: 100%; height: 100%; display: inline-block; fill: rgb(224, 223, 220); flex-shrink: 0; cursor: auto;"
+                     viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg">
+                    <g color="rgb(224, 223, 220)">
+                        <circle opacity="0.2" r="96" cy="128" cx="128"></circle>
+                        <circle stroke-width="16" stroke-miterlimit="10" stroke="rgb(224, 223, 220)" fill="none" r="96"
+                                cy="128" cx="128"></circle>
+                        <polyline stroke-width="16" stroke-linejoin="round" stroke-linecap="round"
+                                  stroke="rgb(224, 223, 220)" fill="none"
+                                  points="134.1 161.9 168 128 134.1 94.1"></polyline>
+                        <line stroke-width="16" stroke-linejoin="round" stroke-linecap="round"
+                              stroke="rgb(224, 223, 220)" fill="none" y2="128" x2="168" y1="128" x1="88"></line>
+                    </g>
+                </svg>
+            </div>
         </div>
     </a>
 </div>
