--- a/src/main/resources/templates/fragments/file-input.html
+++ b/src/main/resources/templates/fragments/file-input.html
@@ -1,4 +1,4 @@
-<div th:fragment="file-input(fileFieldName, placeholder)">
+<div th:fragment="file-input(fileFieldName, placeholder)" class="file-input">
     <label for="file_input"
            class="flex flex-col items-center justify-center w-full border-2 border-dashed rounded-lg cursor-pointer hover:bg-gray-800 bg-gray-700 border-gray-600 hover:border-gray-500">
         <div class="flex flex-col items-center justify-center pt-5 pb-6">
