--- a/src/main/resources/templates/add-note.html
+++ b/src/main/resources/templates/add-note.html
@@ -11,10 +11,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body class="min-h-screen flex flex-col">
+<style>
+    body {
+        min-height: 100dvh;
+    }
+</style>
+<body class="flex flex-col">
 <div th:replace="~{fragments/navbar}"></div>
 
-<main class="flex-grow main">
+<main class="flex-grow flex items-center main">
     <div th:replace="~{fragments/add-note-form}"></div>
 </main>
 
