--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,10 +12,13 @@
     <script src="/js/jquery/dist/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
-<body class="min-h-screen flex flex-col overflow">
+<style>
+    body {
+        min-height: 100dvh;
+    }
+</style>
+<body class="flex flex-col overflow">
 <div th:replace="~{fragments/navbar}"></div>
-
 <main class="flex flex-grow">
     <div th:replace="~{fragments/card-menu}"></div>
 </main>
