--- a/src/main/resources/templates/note-editors.html
+++ b/src/main/resources/templates/note-editors.html
@@ -15,7 +15,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body class="min-h-screen flex flex-col overflow">
+<style>
+    body {
+        min-height: 100dvh;
+    }
+</style>
+<body class="flex flex-col overflow">
 <div th:replace="~{fragments/navbar}"></div>
 
 <main class="flex flex-grow">
