File modal loader has been added

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -52,7 +52,7 @@
                             }
                         </style>
 
-                        <div class="col-span-2 relative">
+                        <div class="w-full relative">
                             <div th:replace="~{fragments/form-field.html :: form-field('password', 'Password', 'text', 'save-input')}"></div>
                             <button type="button" data-hs-toggle-password='{
                               "target": "#password"
@@ -73,12 +73,12 @@
                                 </svg>
                             </button>
                         </div>
-                        <div class="col-span-2 relative">
+                        <div class="w-full relative">
                             <input type="text" id="password-confirmation"
                                    class="my-input block rounded-lg px-2.5 pb-1.5 pt-4 w-full text-sm text-gray-900 bg-gray-50 dark:bg-gray-700 border-0 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
                                    placeholder=" "/>
                             <label for="password-confirmation"
-                                   class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-3 scale-75 top-3 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-3 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">Password
+                                   class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-3 scale-75 top-3 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-3 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">
                                 Confirmation</label>
                             <p th:id="password-confirmation-error"
                                class="mt-1 text-xs text-red-600 dark:text-red-500 hidden">
