--- a/src/main/resources/templates/fragments/modals.html
+++ b/src/main/resources/templates/fragments/modals.html
@@ -273,7 +273,7 @@
                             '    </style>\n' +
                             '    <div class="loader">\n' +
                             '        <div class="loading-text">\n' +
-                            '            Upload your note<span class="dot">.</span><span class="dot">.</span\n' +
+                            '            Upload your file<span class="dot">.</span><span class="dot">.</span\n' +
                             '        ><span class="dot">.</span>\n' +
                             '        </div>\n' +
                             '        <div class="loading-bar-background">\n' +
